[Chromium] HarfBuzzShaper can't handle segmented text run https://bugs.webkit.org/show_bug.cgi?id=92445

Reviewed by Tony Chang.

Pass the range to be displayed to HarfBuzzShaper. The shaper calculates positions and advances of each glyph
regardless of the range, but only add glyphs which are in the range.

No new tests. platform/chromium-linux/fast/text/international/draw-complex-text-from-to.html should
work as expected once we move to use harfbuzz-ng on linux. Note that the current expectation will need to be rebaselined
because the old hb shaper (ComplexTextController) mishandles the range. |to| should be exclusive. I'll rebaseline
the expectation later.

* platform/graphics/harfbuzz/FontHarfBuzz.cpp:
(WebCore::Font::drawComplexText): Call shaper.setDrawRange().
* platform/graphics/harfbuzz/ng/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::HarfBuzzShaper):
(WebCore::HarfBuzzShaper::setDrawRange): Added.
(WebCore):
(WebCore::HarfBuzzShaper::shouldDrawCharacterAt): Added.
(WebCore::HarfBuzzShaper::shapeHarfBuzzRuns): Added variables that hold pending advances.
(WebCore::HarfBuzzShaper::setGlyphPositionsForHarfBuzzRun): Add only glyphs which are in the given range to glyphBuffer.
* platform/graphics/harfbuzz/ng/HarfBuzzShaper.h:
(HarfBuzzShaper):
* platform/graphics/mac/FontComplexTextMac.cpp:
(WebCore::Font::drawComplexText): Call shaper.setDrawRange().


Canonical link: https://commits.webkit.org/110425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123991 268f45cc-cd09-0410-ab3c-d52691b4dbfc